apps/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.raoshahzaib.site
      secretName: wildcard-raoshahzaib-site-tls
  rules:
    - host: argocd.raoshahzaib.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
